--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
         </div>
       </section>
       <div class="why_container">
-
         <section id="why">
           <h2 class="h2_why">
             Чому люди
@@ -201,136 +200,135 @@
                 переробити
               </p>
             </article>
-
-          
-        </section>
-
-      <section id="procedures">
-        <div class="container_procedures">
-          <h2 class="procedure_title"><span>Наші процедури</span></h2>
-        </div>
-
-          <ul class="procedure_list">
-            <li>
-              <button class="carousel_button" type="button">
-                <svg class="carousel_arrow" width="16px" height="16px">
-                  <use href="symbol-defs.svg#icon-arrow"></use>
-                </svg>
-              </button>
-            </li>
-            <li>
-              <article class="procedure_1">
-                <h2 class="procedure_name">
-                  Маски <br />
-                  для обличчя
-                </h2>
-              </article>
-            </li>
-            <li>
-              <article class="procedure_2">
-                <h2 class="procedure_name">
-                  Ін'єкції<br />
-                  для обличчя
-                </h2>
-              </article>
-            </li>
-            <li>
-              <article class="procedure_3">
-                <h2 class="procedure_name">
-                  Очищення<br />
-                  обличчя
-                </h2>
-              </article>
-            </li>
-            <li>
-              <button class="carousel_button_right" type="button">
-                <svg class="carousel_arrow_right" width="16px" height="16px">
-                  <use href="symbol-defs.svg#icon-arrow"></use>
-                </svg>
-              </button>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <div class="container_where">
-        <h2>Як нас <span>знайти</span></h2>
-        <section id="contact">
-          <iframe
-            class="maps"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9325719461126!2d30.5181753!3d50.4423566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C70YzQstCw0YAg0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60LAsIDUsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699792526604!5m2!1suk!2sua"
-            width="600"
-            height="480"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-          <div class="modal-where">
-            <div class="text-modal-where">
-              <p class="modal-paragraph-where">
-                Запишіться <span>безкоштовно</span> та отримайте подарунок
-              </p>
-              <div>
-                <form class="modal-form" name="modal-form" autocomplete="off">
-                  <div class="field-container-where">
-                    <label class="form-label visually-hidden" for="user-name"
-                      >Введіть ваше імʼя</label
-                    >
-                    <input
-                      class="form-input"
-                      type="text"
-                      id="user-name"
-                      name="user-name"
-                      placeholder="Ваше імʼя та прізвище"
-                      minlength="2"
-                      maxlength="20"
-                      required
-                    />
-                  </div>
-                  <div class="field-container-where">
-                    <label class="form-label visually-hidden" for="tel"
-                      >Номер телефону</label
-                    >
-                    <input
-                      class="form-input"
-                      type="tel"
-                      id="tel"
-                      name="tel"
-                      placeholder="Ваш номер телефону"
-                      pattern="^\+[0-9]{12}"
-                      required
-                    />
-                  </div>
-                  <div class="field-container-where">
-                    <label class="form-label visually-hidden" for="email"
-                      >Електронна пошта</label
-                    >
-                    <input
-                      class="form-input"
-                      type="email"
-                      id="email"
-                      name="email"
-                      placeholder="Ваша електронна пошта"
-                      required
-                    />
-                  </div>
-
-                  <div class="btn_policy_container">
-                    <button type="submit" class="button_call_modal">
-                      Записатись безкоштовно
-                    </button>
-
-                    <p class="text-policy">
-                      Натискаючи на кнопку я погоджуюсь з
-                      <a href="#">політикою конфіденційності</a>
-                    </p>
-                  </div>
-                </form>
-              </div>
-            </div>
           </div>
         </section>
+
+        <section id="procedures">
+          <h2 class="procedure_title">Наші <span>процедури</span></h2>
+
+          <div class="container_procedures">
+            <ul class="procedure_list">
+              <li>
+                <button class="carousel_button" type="button">
+                  <svg class="carousel_arrow" width="16px" height="16px">
+                    <use href="symbol-defs.svg#icon-arrow"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <article class="procedure_1">
+                  <h2 class="procedure_name">
+                    Маски <br />
+                    для обличчя
+                  </h2>
+                </article>
+              </li>
+              <li>
+                <article class="procedure_2">
+                  <h2 class="procedure_name">
+                    Ін'єкції<br />
+                    для обличчя
+                  </h2>
+                </article>
+              </li>
+              <li>
+                <article class="procedure_3">
+                  <h2 class="procedure_name">
+                    Очищення<br />
+                    обличчя
+                  </h2>
+                </article>
+              </li>
+              <li>
+                <button class="carousel_button_right" type="button">
+                  <svg class="carousel_arrow_right" width="16px" height="16px">
+                    <use href="symbol-defs.svg#icon-arrow"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <div class="container_where">
+          <h2>Як нас <span>знайти</span></h2>
+          <section id="contact">
+            <iframe
+              class="maps"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9325719461126!2d30.5181753!3d50.4423566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C70YzQstCw0YAg0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60LAsIDUsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699792526604!5m2!1suk!2sua"
+              width="600"
+              height="480"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+            <div class="modal-where">
+              <div class="text-modal-where">
+                <p class="modal-paragraph-where">
+                  Запишіться <span>безкоштовно</span> та отримайте подарунок
+                </p>
+                <div>
+                  <form class="modal-form" name="modal-form" autocomplete="off">
+                    <div class="field-container-where">
+                      <label class="form-label visually-hidden" for="user-name"
+                        >Введіть ваше імʼя</label
+                      >
+                      <input
+                        class="form-input"
+                        type="text"
+                        id="user-name"
+                        name="user-name"
+                        placeholder="Ваше імʼя та прізвище"
+                        minlength="2"
+                        maxlength="20"
+                        required
+                      />
+                    </div>
+                    <div class="field-container-where">
+                      <label class="form-label visually-hidden" for="tel"
+                        >Номер телефону</label
+                      >
+                      <input
+                        class="form-input"
+                        type="tel"
+                        id="tel"
+                        name="tel"
+                        placeholder="Ваш номер телефону"
+                        pattern="^\+[0-9]{12}"
+                        required
+                      />
+                    </div>
+                    <div class="field-container-where">
+                      <label class="form-label visually-hidden" for="email"
+                        >Електронна пошта</label
+                      >
+                      <input
+                        class="form-input"
+                        type="email"
+                        id="email"
+                        name="email"
+                        placeholder="Ваша електронна пошта"
+                        required
+                      />
+                    </div>
+
+                    <div class="btn_policy_container">
+                      <button type="submit" class="button_call_modal">
+                        Записатись безкоштовно
+                      </button>
+
+                      <p class="text-policy">
+                        Натискаючи на кнопку я погоджуюсь з
+                        <a href="#">політикою конфіденційності</a>
+                      </p>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
       </div>
     </main>
     <footer>
