--- a/index.html
+++ b/index.html
@@ -119,20 +119,45 @@
             </p>
           </div>
           <div class="images_about">
-            <div>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="35"
-                height="35"
-                viewBox="0 0 35 35"
-                fill="none"
-                class="star-3"
-              >
-                <path
-                  d="M27.3205 0L23.5024 15.6641L34.641 27.3205L18.9769 23.5024L7.32051 34.641L11.1386 18.9769L0 7.32051L15.6641 11.1386L27.3205 0Z"
-                  fill="#2B7FFF"
-                />
-              </svg>
+            <div></div>
+            <div class="before_1">
+              <div class="before_2">
+                <div class="after_img_container">
+                  <img
+                    src="images/before_1.png"
+                    alt="before"
+                    class="before_1"
+                  />
+                </div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="35"
+                  height="35"
+                  viewBox="0 0 35 35"
+                  fill="none"
+                  class="star-3"
+                >
+                  <path
+                    d="M27.3205 0L23.5024 15.6641L34.641 27.3205L18.9769 23.5024L7.32051 34.641L11.1386 18.9769L0 7.32051L15.6641 11.1386L27.3205 0Z"
+                    fill="#2B7FFF"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="15"
+                  height="16"
+                  viewBox="0 0 15 16"
+                  fill="none"
+                  class="star-1"
+                >
+                  <path
+                    d="M4.48249 0.567997L8.55906 5.56521L14.9653 4.82356L9.96813 8.90013L10.7098 15.3064L6.63321 10.3092L0.226925 11.0508L5.22413 6.97428L4.48249 0.567997Z"
+                    fill="#747272"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="after_1">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="56"
@@ -146,25 +171,9 @@
                   fill="#011F4A"
                 />
               </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="15"
-                height="16"
-                viewBox="0 0 15 16"
-                fill="none"
-                class="star-1"
-              >
-                <path
-                  d="M4.48249 0.567997L8.55906 5.56521L14.9653 4.82356L9.96813 8.90013L10.7098 15.3064L6.63321 10.3092L0.226925 11.0508L5.22413 6.97428L4.48249 0.567997Z"
-                  fill="#747272"
-                />
-              </svg>
-            </div>
-            <div class="before_1">
-              <img src="images/before_1.png" alt="before" class="before_1" />
-            </div>
-            <div class="after_1">
-              <img src="images/after_1.jpg" alt="after_1" class="after_1" />
+              <div class="after_img_container">
+                <img src="images/after_1.jpg" alt="after_1" class="after_1" />
+              </div>
             </div>
           </div>
         </div>
@@ -349,7 +358,7 @@
               >
             </li>
             <li><a class="footer_list" href="">beautyzone@gmail.com</a></li>
-            <li>
+            <li class="footer_address_list">
               <a class="footer_list" href=""
                 >Україна, м. Київ, вул. Тараса Шевченка 5</a
               >
@@ -357,20 +366,20 @@
           </ul>
           <div class="icon_container_footer">
             <a href="tel:+ 38 (096) 000 00 07" class="icon_footer icon"
-              ><svg class="address-icon_footer" width="32" height="32">
+              ><svg class="address-icon_footer" width="42" height="42">
                 <use href="symbol-defs.svg#icon-phone"></use>
               </svg>
             </a>
             <a href="#facebook" class="icon_footer icon"
-              ><svg class="address-icon_footer" width="32" height="32">
+              ><svg class="address-icon_footer" width="42" height="42">
                 <use href="symbol-defs.svg#icon-facebook"></use>
               </svg>
             </a>
             <a href="#instagram" class="icon_footer icon"
               ><svg
                 class="address-icon_footer"
-                width="32"
-                height="32"
+                width="42"
+                height="42"
                 color="white"
               >
                 <use href="symbol-defs.svg#icon-instagram"></use>
